[package]
name = "create-email"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
lettre = {version = "0.11.11", features = ["tokio1-native-tls"]}
uuid = {version = "1", features = ["v4"]}
fake = "3.0.1"
thirtyfour = {version = "0.35.0", features = ["native-tls"]}